--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "courier-main-wrapper"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+publish = false
+description = "A dedicated main wrapper for courier server software"
+license = "MIT"
 
 [dependencies]
 libc = "0.2.158"
